--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       gtag('config', 'AW-17902657564');
     </script>
 
+    <!-- Event snippet for Compra conversion page -->
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-17902657564/OuVeCIrJ_-sbEJzA09hC',
+          'transaction_id': ''
+      });
+    </script>
+
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.cybernexinnovatech.com.br/">
