--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cybernex Innovatech - Criação de Sites para Todo o Brasil</title>
 
     <meta name="description" content="Criação de sites profissionais e Landing Pages para empresas de todo o Brasil. Desenvolvimento web de alta performance, SEO e tráfego pago. Peça seu orçamento!">
-    <meta name="keywords" content="criação de sites, desenvolvimento web, landing page, site institucional, SEO, programador web, web design brasil">
+    <meta name="keywords" content="criação de sites, desenvolvimento web, landing page, site institucional, SEO, programador web, web design brasil, sistema CRM, gestão de clientes, automação de vendas">
     
     <!-- SEO Otimizado: Meta Tags Sociais e Controle -->
     <meta name="robots" content="index, follow">
@@ -296,6 +296,7 @@
                 </div>
                 <div class="nav-links">
                     <a href="#servicos">Serviços</a>
+                    <a href="crm-para-empresas.html">CRM</a>
                     <a href="#portfolio">Portfólio</a>
                     <a href="#faq">Dúvidas</a>
                     <a href="#contato" class="btn btn-primary">Solicitar Orçamento</a>
@@ -939,7 +940,7 @@
                 </p>
                 <h5>🚀 Segmentos Especializados</h5>
                 <p>
-                    <a href="site-para-advogado.html">Site para Advogado</a>, <a href="site-para-clinica.html">Site para Clínica</a>, <a href="site-para-medico.html">Site para Médico</a>, <a href="site-para-engenheiro.html">Site para Engenheiro</a>, <a href="site-para-amarracao-amorosa.html">Site para Amarração Amorosa</a>, <a href="site-para-magia-amorosa.html">Site para Magia Amorosa</a>, <a href="site-para-tarologa.html">Site para Taróloga</a>, <a href="site-para-astrologa.html">Site para Astróloga</a>, <a href="site-para-dentista.html">Site para Dentista</a>, <a href="site-para-arquiteto.html">Site para Arquiteto</a>, <a href="site-para-contador.html">Site para Contador</a>, <a href="site-para-imobiliaria.html">Site para Imobiliária</a>, <a href="site-para-restaurante.html">Site para Restaurante</a>, <a href="site-para-delivery.html">Site para Delivery</a>, <a href="site-para-academia.html">Site para Academia</a>, <a href="site-para-personal-trainer.html">Site para Personal Trainer</a>, <a href="site-para-psicologo.html">Site para Psicólogo</a>, <a href="site-para-nutricionista.html">Site para Nutricionista</a>, <a href="site-para-barbearia.html">Site para Barbearia</a>, <a href="site-para-salao-de-beleza.html">Site para Salão de Beleza</a>, <a href="site-para-pet-shop.html">Site para Pet Shop</a>, <a href="site-para-oficina-mecanica.html">Site para Oficina Mecânica</a>, <a href="site-para-construtora.html">Site para Construtora</a>.
+                    <a href="site-para-advogado.html">Site para Advogado</a>, <a href="site-para-clinica.html">Site para Clínica</a>, <a href="site-para-medico.html">Site para Médico</a>, <a href="site-para-engenheiro.html">Site para Engenheiro</a>, <a href="site-para-amarracao-amorosa.html">Site para Amarração Amorosa</a>, <a href="site-para-magia-amorosa.html">Site para Magia Amorosa</a>, <a href="site-para-tarologa.html">Site para Taróloga</a>, <a href="site-para-astrologa.html">Site para Astróloga</a>, <a href="site-para-dentista.html">Site para Dentista</a>, <a href="site-para-arquiteto.html">Site para Arquiteto</a>, <a href="site-para-contador.html">Site para Contador</a>, <a href="site-para-imobiliaria.html">Site para Imobiliária</a>, <a href="site-para-restaurante.html">Site para Restaurante</a>, <a href="site-para-delivery.html">Site para Delivery</a>, <a href="site-para-academia.html">Site para Academia</a>, <a href="site-para-personal-trainer.html">Site para Personal Trainer</a>, <a href="site-para-psicologo.html">Site para Psicólogo</a>, <a href="site-para-nutricionista.html">Site para Nutricionista</a>, <a href="site-para-barbearia.html">Site para Barbearia</a>, <a href="site-para-salao-de-beleza.html">Site para Salão de Beleza</a>, <a href="site-para-pet-shop.html">Site para Pet Shop</a>, <a href="site-para-oficina-mecanica.html">Site para Oficina Mecânica</a>, <a href="site-para-construtora.html">Site para Construtora</a>, <a href="crm-para-empresas.html"><strong>CRM para Empresas</strong></a>.
                 </p>
                 <h5>☁️ Hospedagem e Infraestrutura</h5>
                 <p>
